--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,5 @@
 
 # Exclude dataset files #
 ##########################
-<<<<<<< HEAD
-data/*
-=======
-r_sql/data/*
-python_sql/data/*
->>>>>>> 5904822 (Minor change to .gitignore)
+*.csv
+*.csv.bz2
